<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:onClick="OnClickFive"
        android:text="@string/five"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:onClick="OnClickFour"
        android:text="@string/four"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:onClick="OnClickSix"
        android:text="@string/six"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:onClick="OnClickEight"
        android:text="@string/eight"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:onClick="OnClickSeven"
        android:text="@string/seven"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:onClick="OnClickNine"
        android:text="@string/nine"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:onClick="OnClickThree"
        android:text="@string/three"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:onClick="OnClickTwo"
        android:text="@string/two"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/LightishBlue" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="168dp"
        android:gravity="center"
        android:onClick="OnClickOne"
        android:text="@string/one"
        android:textSize="34sp"
        app:backgroundTint="@color/LightishBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:gravity="center"
        android:text="@string/WinnerText"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/TurnText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button10"
        android:layout_width="156dp"
        android:layout_height="90dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="68dp"
        android:onClick="OnClickRestart"
        android:text="@string/Restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>